# Text.AutoSummarization.Python

./: .gitignore  Dockerfile  README.md  analyze_types.json  docker-compose.yml  example.env  pyproject.toml
hf_models/xlm-roberta-large-xnli/: README.md
huggingface/xlm-roberta-large-xnli/: README.md
src/auto_summarization/adapters/: base.py  orm.py  repository.py
src/auto_summarization/domain/: analysis.py  analyze_type.py  base.py  session.py  user.py
src/auto_summarization/entrypoints/: api.py
src/auto_summarization/entrypoints/routers/: analysis.py  analyze_types.py  document.py  session.py  sessions.py  user.py  users.py
src/auto_summarization/entrypoints/schemas/: analysis.py  analyze_types.py  document.py  session.py  user.py
src/auto_summarization/services/: analyze_service.py  analyze_types.py  config.py  document_service.py  models.py  session_service.py  user_service.py
src/auto_summarization/services/handlers/: analysis.py  session.py  user.py
src/auto_summarization/services/utils/: text_processing.py
src/chat-translation/: __init__.py
src/chat-translation/adapters/: base.py  orm.py  repository.py
src/chat-translation/domain/: enums.py  model.py  session.py  user.py
src/chat-translation/entrypoints/: api.py
src/chat-translation/entrypoints/routers/: model.py  session.py  user.py
src/chat-translation/entrypoints/schemas/: model.py  session.py
src/chat-translation/services/: config.py
src/dotenv/: __init__.py
src/requests/: __init__.py  adapters.py  exceptions.py  sessions.py
tests/: conftest.py  test_api.py  test_models.py
(+8 files in other folders)
